# mod-progression-system

./: .gitignore  ARENA_SEASONS_VALIDATION.md  BRACKET_DESCRIPTIONS_COMPLETE.md  CMakeLists.txt  DEPLOYMENT.md  DYNAMIC_LOADING.md  ICC_ICC5_DUNGEONS_QUESTS_AUDIT.sql  IMPLEMENTACION_VENDORS_SQL.md  IMPLEMENTATION_SUMMARY.md  MANUAL_HOTFIX_NAXX_SAPPHIRON_GATING.sql  MANUAL_HOTFIX_WINTERGRASP_VENDOR_PROGRESSIVE.sql  PARAMETROS_TECNICOS_DESARROLLO.md  PRODUCTION.md  PVP_TRINKETS_AUDIT.sql  README.md  SQL_VERIFICATION.sql  WINTERGRASP_CHAMPION_ROS_VENDOR_AUDIT.sql  wowespy_progression.html  wowespy_progression.php
audit/: ARENA_SEASONS_VALIDATION.md  ARENA_VENDORS_SETUP.sql  BRACKET_RUNTIME_REPORT.md  CUSTOM_LOCKS_AUDIT.sql  NPCFLAG_VENDOR_AUDIT.sql  NPCFLAG_VENDOR_FIX.sql  NPCFLAG_VENDOR_GUIDE.md  README.md  USURI_BRIGHTCOIN_35790_EMBLEM_EXCHANGE_AUDIT.sql  USURI_BRIGHTCOIN_35790_EMBLEM_EXCHANGE_GUIDE.md  USURI_BRIGHTCOIN_35790_EMBLEM_EXCHANGE_RESTORE.sql  WINTERGRASP_VENDORS_AUDIT.sql  WINTER_VEIL_VENDORS_AUDIT.sql  WOTLK_DISABLES_AUDIT.sql  WOTLK_DISABLES_GUIDE.md  WOTLK_WEEKLY_RAID_QUESTS_AUDIT.sql  WOTLK_WEEKLY_RAID_QUESTS_GUIDE.md
conf/: conf.sh.dist  mod-progression-blizzlike.conf.dist  progression_system.conf.dist
scripts/: generate_bracket_report.ps1  production_package.ps1
src/: ProgressionSystem.cpp  ProgressionSystem.h  ProgressionSystem_config_warnings.cpp  ProgressionSystem_custom_locks.cpp  ProgressionSystem_heroic_gs.cpp  ProgressionSystem_loader.cpp  cs_progression_module.cpp
src/Bracket_0/: Bracket_0_loader.cpp
(+183 files in other folders)
